fix about page scrollbar

--- a/components/About/Profile/Profile.module.scss
+++ b/components/About/Profile/Profile.module.scss
@@ -12,12 +12,8 @@
 .photo {
   max-width: 20rem;
 
-  * {
-    display: block;
-    width: 100%;
-  }
-
   img {
+    display: block;
     height: auto;
     width: 100%;
   }
